// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KeeperRewards harvest succeeds for latest rewards root 1`] = `
Object {
  "calldataByteLength": 292,
  "gasUsed": 115457,
}
`;

exports[`KeeperRewards harvest succeeds for latest rewards root 2`] = `
Object {
  "calldataByteLength": 292,
  "gasUsed": 61930,
}
`;

exports[`KeeperRewards harvest succeeds for previous rewards root 1`] = `
Object {
  "calldataByteLength": 292,
  "gasUsed": 117628,
}
`;

exports[`KeeperRewards harvest succeeds for previous rewards root 2`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 78160,
}
`;

exports[`KeeperRewards harvest succeeds for previous rewards root 3`] = `
Object {
  "calldataByteLength": 292,
  "gasUsed": 64101,
}
`;

exports[`KeeperRewards set rewards root succeeds 1`] = `
Object {
  "calldataByteLength": 740,
  "gasUsed": 112425,
}
`;

exports[`KeeperRewards set rewards root succeeds 2`] = `
Object {
  "calldataByteLength": 740,
  "gasUsed": 115237,
}
`;
